segundo commit: pagina ya empezada

--- a/TA05_HTML-CSS-JS_25_26/estilo/style.css
+++ b/TA05_HTML-CSS-JS_25_26/estilo/style.css
@@ -13,7 +13,7 @@ body {
   min-height: 100vh; /* ensure footer can be pushed to bottom */
 }
 
-/* header / navbar: increase thickness and spacing, use elegant font */
+/* header / navbar: increase thickness and spacing, use eleegant font */
 .navbar {
   background: #29418a;
   padding: 24px 28px; /* thicker top area */
